[package]
name = "listpath"
version = "0.2.0"
authors = ["TAKAHASHI Satoshi <hikobae@gmail.com>"]
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
